crates/carta/tests/snapshots/golden_writer__revealjs__image-dimensions__image-inline-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>text <img data-src="pic.png" width="200" alt="alt" /> more</p>
</section>
